ci: added files for install

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-cffi==1.15.1
-cryptography==39.0.0
-prettytable==3.6.0
-pycparser==2.21
-PyMySQL==1.0.2
-wcwidth==0.2.6
+Package      Version
+------------ -------
+altgraph     0.17.3
+cffi         1.15.1
+cryptography 39.0.0
+pip          22.3.1
+prettytable  3.6.0
+pycparser    2.21
+PyMySQL      1.0.2
+setuptools   65.6.3
+wcwidth      0.2.6
+wheel        0.38.4
